# risk_api

./: .gitignore  Dockerfile  Makefile  README copy 2.md  README copy.md  README.md  design.md  design_polished.md  new_steps.md  pyproject.toml  setup.md  to_study.md  toy.md
.github/workflows/: ci.yaml  release.yaml
app/demo/: Dockerfile  pyproject.toml
app/demo/src/: app.py
app/demo/tests/: test_setup.py
app/risk_api/: pyproject.toml
app/risk_api/src/: app.py  model.py
app/risk_api/tests/: test_api.py
app/risk_api_delete/: pyproject copy.toml
helm/demo/: Chart.yaml  values.yaml
helm/demo/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  service.yaml
src/: app.py  model.py
tests/e2e/: test_api_running.py  test_user_flow.py
tests/functional/: test_api_functional.py
tests/integration/: test_prediction_api.py
tests/performance/: locustfile.py
tests/regression/: test_regression.py
tests/security/: test_security.py
tests/smoke/: test_health.py
tests/unit/: test_model.py
