[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "risk-api"
version = "0.1.0"
description = "AI risk classification API demo"
requires-python = ">=3.9"

dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0"
]


[project.optional-dependencies]

dev = [
    "ruff>=0.5.0"
]

test = [
    "pytest>=8.0.0",
    "requests"
]

performance = [
    "locust"
]

security = [
    "bandit",
    "pip-audit"
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = [
    "src"
]

testpaths = [
    "tests"
]


[tool.ruff]
line-length = 88
target-version = "py311"


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]

[tool.ruff.lint.isort]
known-first-party = ["src"]