[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "platform-demo"
version = "0.1.0"
description = "Demo API for Senior Platform Engineer release pipeline"
requires-python = ">=3.9"

dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0"
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0"
]


[tool.pytest.ini_options]
testpaths = [
    "tests"
]


[tool.ruff]
line-length = 100
target-version = "py312"

